fixed coursesbackground z-index

--- a/client/static/scss/home.scss
+++ b/client/static/scss/home.scss
@@ -303,8 +303,14 @@ main {
 	max-width: 100%;
 	height: auto;
 }
-
+//may change the background image to linear gradient so we dont have sizing is
 .course-background,
 .testimonial-background {
-	width: 100%;
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit:fill;
 }
